--- a/style.css
+++ b/style.css
@@ -1,70 +1,147 @@
+@import 'https://fonts.googleapis.com/css?family=Comfortaa:400,700|Fredoka+One|Nunito:400,800,900|Poiret+One|Quicksand:400,500,700';
+
+
+html,
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #333; /* Dark background color */
-    color: #fff; /* Light text color */
-    margin: 0;
+  font-family: 'comfortaa', sans-serif;
+  text-align: center;
 }
 
-.container {
-    width: 80%;
-    margin: 0 auto;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-header {
-    background-color: #222; /* Darker header background color */
-    padding: 20px 0;
-}
+/* Nav bar */
 
-header h1 {
-    margin: 0;
-    font-size: 2.5rem;
-}
-
-nav {
-    background-color: #444; /* Dark navigation background color */
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+ nav ul {
+  position: fixed;
+  text-align: right;
+  width: 100%;
+  background-color: #Fff;
+  font-family: "comfortaa",sans-serif; 
+  font-size: 1.2em; 
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 10px;
+  display: inline-block;
+  margin: 30px; 
 }
 
 nav ul li a {
-    text-decoration: none;
-    color: #fff; /* Light navigation text color */
-    font-size: 1.2rem;
+  color: #000;
+  text-decoration: none;  
 }
-
 nav ul li a:hover {
-    color: #ffc107; /* Hover color for navigation links */
+  color: #ababab;
 }
 
-main {
-    padding: 20px 0;
+/* about me */
+
+#welcome-section {
+  top: 20;
+  line-height: 1.6;
+  background: #F5F5F5;
+  min-height: 55vh;
+  padding-top: 45vh;
+  text-align: 
+}
+  
+/* the projects section */
+
+.work {
+  padding-top: 60px;
+  margin-top: -60px;
+  padding-bottom: 60px;
+  background-color: #dcdcdc;
 }
 
-section {
-    background-color: #222; /* Dark section background color */
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow */
-    margin-bottom: 20px;
+.work .work-header {
+  margin-top: 50px;
+  color: #111;
+  font-weight: normal;
 }
 
-section h2 {
-    color: #fff; /* Light section heading color */
+.project {
+  text-decoration: none;
+  background-color: #c4c4c4;
+  display: inline-block;
+  overflow: hidden;
+  border: 2px solid #ababab;
+  border-radius: 5px;
+  height: 220px;
+  width: 280px;
+  margin: 40px 100px;
 }
 
-footer {
-    background-color: #222; /* Dark footer background color */
-    padding: 10px 0;
+.project-pic {
+  width: 100%;
+  height: 180px;
+  border-bottom: 2px solid #ababab;
+  border-radius: 5px;
+}
+
+.project-title {
+  color: #111;
+  font-weight: bold;
+  padding-top: 6px;
+}
+
+.project-title:hover {
+  color: #939393;
+  
+}
+
+.show-all {
+  color: #111;
+  font-weight: bold;
+  background-color: #c4c4c4;
+  display: block;
+  width: 100px;
+  text-decoration: none;
+  padding: 20px;
+  border: 2px solid #ababab;
+  border-radius: 100px;
+  margin: 0 auto;
+}
+
+.show-all:hover {
+  color: #111;
+  font-size: 15px;
+  font-weight: bold;
+  background-color: #c4c4c4;
+  text-align: center;
+  text-decoration: none;
+  width: 80px;
+  padding: 20px;
+  border: 2px solid #ababab;
+  border-radius: 100px;
+}
+
+/* contact */
+
+.contact {
+  background-color: #ababab;
+  padding: 60px ;
+  line-height: 1.6;
+}
+
+.contact-details {
+  padding: 60px;
+  display: inline-block;
+  
+}
+
+/* mobile section */
+
+@media screen and (max-width: 400px) {
+  nav ul {
     text-align: center;
+  }
+  nav ul li {
+    margin: 20px;
+  }
+  .project {
+    margin: 40px 0;
+  }
 }
